--- a/.docker/docker-compose.dev.yml
+++ b/.docker/docker-compose.dev.yml
@@ -1,15 +1,32 @@
 version: "3.9"
 
 services:
-  conda-repo-template:
-    # Choose one
-    # image: utkusarioglu/conda-econ-devcontainer:1.0.14
-    # image: utkusarioglu/conda-math-devcontainer:1.0.14
-    # image: utkusarioglu/conda-music-devcontainer:1.0.14
-
+  sql-algo-workshop:
+    container_name: sql-algo-workshop
+    image: utkusarioglu/conda-econ-devcontainer:1.0.15
     environment:
-      PYTHONPATH: /utkusarioglu-com/templates/conda-repo-template
+      PYTHONPATH: /utkusarioglu-com/workshops/sql-algo-workshop/src
     volumes:
       - type: bind
         source: ..
-        target: /utkusarioglu-com/templates/conda-repo-template
+        target: /utkusarioglu-com/workshops/sql-algo-workshop
+  sql-algo-workshop-postgres:
+    container_name: sql-algo-workshop-postgres
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
+    volumes:
+      - type: bind
+        source: ../src/sql/migrations
+        target: /migrations
+      - type: bind
+        source: ../src/sql/init-scripts
+        target: /docker-entrypoint-initdb.d
+      - type: volume
+        source: sql-algo-workshop-postgres-data
+        target: /var/lib/postgresql/data
+
+volumes:
+  sql-algo-workshop-postgres-data:
+    name: sql-algo-workshop-postgres-data
