--- a/.repo-template.config
+++ b/.repo-template.config
@@ -2,4 +2,4 @@ TEMPLATE_AUTO_REJECT=""
 TEMPLATE_REPO_ORIGIN=repo-template
 TEMPLATE_REPO_BRANCH=main
 TEMPLATE_REPO_URL=https://github.com/utkusarioglu/conda-repo-template.git
-TEMPLATE_LAST_COMMIT_EPOCH=0
+TEMPLATE_LAST_COMMIT_EPOCH=1694451007 # 2023-09-11 16:50:07
