--- a/.repo.config
+++ b/.repo.config
@@ -1,3 +1,3 @@
-REPO_CLASS="conda-repo-template.templates.utkusarioglu.com"
-REPO_PATH="/utkusarioglu-com/templates/conda-repo-template"
-REPO_SERVICE="conda-repo-template"
+REPO_CLASS="sql-algo-workshop.workshops.utkusarioglu.com"
+REPO_PATH="/utkusarioglu-com/workshops/sql-algo-workshop"
+REPO_SERVICE="sql-algo-workshop"
