--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,4 @@
 {
-  "jupyter.kernels.filter": [
-    {
-      "path": "/opt/conda/bin/python",
-      "type": "pythonEnvironment"
-    },
-    {
-      "path": "/usr/bin/python3",
-      "type": "pythonEnvironment"
-    }
-  ],
   "runOnSave.commands": [
     {
       "match": "\\.env(\\.\\w+)?$",
@@ -23,8 +13,9 @@
     },
   ],
   "python.formatting.provider": "black",
-  "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true,
-  "python.linting.flake8Path": "/opt/conda/envs/default/lib/python3.10/site-packages/flake8",
-  "python.analysis.typeCheckingMode": "basic"
+  "python.analysis.typeCheckingMode": "basic",
+  "jupyter.kernels.excludePythonEnvironments": [
+    "/opt/conda/bin/python",
+    "/usr/bin/python3"
+  ]
 }
